2005-05-27	Gaius Mulley <gaius@glam.ac.uk>

	* gm2/gccgm2.c fixed to detect array indices which exceed
	  sizetype.

2005-05-25	Michel Derosa <derosa@videotron.ca>

	* applied patches to gm2/gm2.texi which describe FreeBSD
	  build instructions.

2005-05-19	Gaius Mulley <gaius@glam.ac.uk>

	* rebuilt gm2/gm2-libs/configure
	* gm2/gm2.texi added section heading for advice on building
	  GNU Modula-2 under FreeBSD 5.3

2005-05-19	Michel Derosa <derosa@videotron.ca>

	* applied patches to make gm2 build on FreeBSD 5.3
	* gm2/gm2-libs/configure.in test for signal.h and direct.h
	* gm2/gm2-libs/gm2-libs-host.h.in test for signal.h and direct.h
	* gm2/tools-src/createUlmSys test for signal.h and direct.h

2005-05-18	Gaius Mulley <gaius@glam.ac.uk>

	* testsuite/gm2/types/run/pass/varient5.mod introduced to stress
	  variant records (equivalent to a C union for casting BYTES
	  into a CARDINAL). Based on an idea from Michel Derosa.

2005-05-17	Gaius Mulley <gaius@glam.ac.uk>

	* gm2/gm2-compiler/M2Quads.mod modified to accept zero length strings
	  as compatible with type CHAR.
	* gm2/gm2-compiler/M2GenGCC.mod many modifications/refactoring to enable
	  strings of 1 or 0 characters to be type compatible with CHAR.
	* these fixes allow Iztok's ISO library to compile cleanly.
	
2005-05-16	Gaius Mulley <gaius@glam.ac.uk>

	* gm2/gm2-compiler/M2GenGCC.mod fixed to allow HIGH(ch) where ch is
	  of type CHAR.
	* gm2/gm2-compiler/M2GenGCC.mod fixed to allow comparison of literals
	  against subrange types.
	* gm2/gm2-compiler/M2GenGCC.mod fixed to allow automatic conversion
	  of strings of 1 or 0 characters to be passed to a parameter of
	  type CHAR.
	* these fixes allow more of the third party tests (from Iztok)
	  to pass.

2005-05-13	Gaius Mulley <gaius@glam.ac.uk>

	* gm2/Make-lang.in shell invocation to use $(SHELL) and also
	  converted bashisms into pure sh as suggested by
	  Michel Derosa <derosa@videotron.ca>
	
2005-05-12	Gaius Mulley <gaius@glam.ac.uk>
